swapped ch and en names to avoid overlap

--- a/style.styl
+++ b/style.styl
@@ -140,13 +140,13 @@ header
         position relative
 
         h2
-          font-size 23px
+          font-size 24px
           color darkgrey
           opacity .75
           font-weight normal
           margin 0
           position absolute
-          top 5px
+          top 3px
           left 0
           max-width 360px
           line-height 1.25
